--- a/src/protocol/protocol.yml
+++ b/src/protocol/protocol.yml
@@ -884,6 +884,13 @@ Page:
         x: number
         y: number
 
+    touchscreenMove:
+      parameters:
+        startX: number
+        startY: number
+        endX: number
+        endY: number
+
     accessibilitySnapshot:
       parameters:
         interestingOnly: boolean?
