增加touchscreendown和touchscreenup方法

--- a/src/protocol/protocol.yml
+++ b/src/protocol/protocol.yml
@@ -891,6 +891,13 @@ Page:
         endX: number
         endY: number
 
+    touchscreenDown:
+      parameters:
+        startX: number
+        startY: number
+
+    touchscreenUp:
+
     accessibilitySnapshot:
       parameters:
         interestingOnly: boolean?
