--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "playwright-internal",
-  "private": true,
-  "version": "1.21.0-next",
+  "name": "@baidu/playwright-expand",
+  "version": "1.21.0-next-beta1",
   "description": "A high-level API to automate web browsers",
   "repository": "github:Microsoft/playwright",
   "homepage": "https://playwright.dev",
