--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@baidu/playwright-expand",
-  "version": "1.27.0-beta5",
-  "description": "A high-level API to automate web browsers dev====",
+  "version": "1.27.0-beta6",
+  "description": "A high-level API to automate web browsers dev",
   "repository": "github:Microsoft/playwright",
   "homepage": "https://playwright.dev",
   "engines": {
