新版本添加move方法

--- a/packages/protocol/src/protocol.yml
+++ b/packages/protocol/src/protocol.yml
@@ -1414,6 +1414,13 @@ Page:
       tracing:
         snapshot: true
 
+    touchscreenMove:
+      parameters:
+        startX: number
+        startY: number
+        endX: number
+        endY: number
+
     touchscreenDown:
       parameters:
         startX: number
